# bigquery_audit_agent

./: .env  .gitignore  README.md  bq_jobs_with_sql.compact.ndjson  bq_jobs_with_sql.ndjson  cloud_function_example.py  config.py  definitions_quickstart-source.sqlx  deploy_function.sh  hello_world.py  job_export.sql  job_ids.txt  main.py  pyproject.toml  requirements.txt  run.sh
adk_app/: README.md  agent.py  agent.yaml  main.py  run.sh  schemas.py
adk_app/tools/: all_job_inspector_tool.py  analyze_tool.py  bq_audit_tool.py  forensic_agent_tool.py  query_analysis_tool.py  query_optimizer_tool.py
adk_bq_audit/: audit.py  cli.py  optimizer.py
analysis_out/: all_job_inspector.md  schema_report.md  temp.txt
data_gen/: README.md  generate_large_dataset.py
tools/: bq_audit.py
